--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-  con
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,6 +14,7 @@
   <body>
     <!--Header-->
     <header>
+      <div class="container">
       <nav>
         <a lang="en" href="./" class="logo">
           <span class="logo-web">Web</span>Studio</a
@@ -145,5 +145,6 @@
         <a href="tel:+38-096-111-11-11">+38 096 111 11 11</a><br />
       </address>
     </footer>
+  </div>
   </body>
 </html>
