--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
   </head>
   <body>
     <!--Header-->
-    <header>
-      <div class="container">
-      <nav>
+    <header class="page-header">
+      <nav class="container">
         <a lang="en" href="./" class="logo">
           <span class="logo-web">Web</span>Studio</a
         >
@@ -54,37 +53,39 @@
       </section>
       <!--Advantage-->
       <section class="section-advantage">
-        <!--<h2 class="advantage-title">Преимущества</h2>-->
-        <ul class="list-advantage">
-          <li class="list">
-            <h3 class="title">Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="list">
-            <h3 class="title">Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="list">
-            <h3 class="title">Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="list">
-            <h3 class="title">Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <!--<h2 class="advantage-title">Преимущества</h2>-->
+          <ul class="list-advantage">
+            <li class="list">
+              <h3 class="title">Внимание к деталям</h3>
+              <p>
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="list">
+              <h3 class="title">Пунктуальность</h3>
+              <p>
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="list">
+              <h3 class="title">Планирование</h3>
+              <p>
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="list">
+              <h3 class="title">Современные технологии</h3>
+              <p>
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Work performed-->
       <section class="section">
@@ -145,6 +146,5 @@
         <a href="tel:+38-096-111-11-11">+38 096 111 11 11</a><br />
       </address>
     </footer>
-  </div>
   </body>
 </html>
