box-sizing header

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,55 +14,61 @@
 
   <body>
     <!--Header-->
-    <header>
-      <nav>
-        <a lang="en" href="./" class="logo">
-          <span class="logo-web">Web</span>Studio</a
-        >
-        <!--Main navigation-->
-        <ul class="site-nav">
-          <li class="list">
-            <a href="./" class="link">Cтудия</a>
+    <header class="page-header">
+      <div class="container flexbox">
+        <nav class="navigation">
+          <a lang="en" href="./" class="logo">
+            <span class="logo-web">Web</span>Studio</a
+          >
+          <!--Main navigation-->
+          <ul class="list site-nav">
+            <li class="item">
+              <a href="./" class="link"> Cтудия </a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link active"
+                ><span>Портфолио</span></a
+              >
+            </li>
+            <li class="item"><a href="./" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <!--feedback-->
+        <ul class="list site-adr">
+          <li class="item">
+            <a href="mailto:info@devstudio.com"
+              ><span>info@devstudio.com</span></a
+            >
           </li>
-          <li class="list">
-            <a href="./portfolio.html" class="link-act">Портфолио</a>
+          <li class="item">
+            <a href="tel:+38-095-111-11-11">+38 096 111 11 11</a>
           </li>
-          <li class="list"><a href="./" class="link">Контакты</a></li>
         </ul>
-      </nav>
-      <!--feedback-->
-      <ul class="site-adr">
-        <li class="list">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="list">
-          <a href="tel:+38-096-111-11-11">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <!--second navigation-menu-->
       <section>
         <!--<h1 class="portfolio">Портфолио</h1>-->
-        <ul>
-          <li class="list">
+        <ul class="list">
+          <li class="item">
             <button type="button" class="button-portfolio">Все</button>
           </li>
-          <li class="list">
+          <li class="item">
             <button type="button" class="button-portfolio">Веб-сайты</button>
           </li>
-          <li class="list">
+          <li class="item">
             <button type="button" class="button-portfolio">Приложения</button>
           </li>
-          <li class="list">
+          <li class="item">
             <button type="button" class="button-portfolio">Дизайн</button>
           </li>
-          <li class="list">
+          <li class="item">
             <button type="button" class="button-portfolio">Маркетинг</button>
           </li>
         </ul>
-        <ul class="list-service">
-          <li class="list">
+        <ul class="list list-service">
+          <li class="item">
             <a href="/">
               <img
                 src="./imgportfolio/vebsite.jpg"
@@ -72,7 +78,7 @@
               <p>Веб-сайт</p></a
             >
           </li>
-          <li class="list">
+          <li class="item">
             <a href="">
               <img
                 src="./imgportfolio/disain.jpg"
@@ -82,7 +88,7 @@
               <p>Дизайн</p>
             </a>
           </li>
-          <li class="list">
+          <li class="item">
             <a href="">
               <img
                 src="./imgportfolio/application.jpg"
@@ -93,21 +99,21 @@
               <p>Приложение</p></a
             >
           </li>
-          <li class="list">
+          <li class="item">
             <a href="/"
               ><img src="./imgportfolio/handfree.jpg" alt="наушники" />
               <h2>Проект Prime</h2>
               <p>Маркетинг</p></a
             >
           </li>
-          <li class="list">
+          <li class="item">
             <a href="/"
               ><img src="./imgportfolio/boxses.jpg" alt="две коробки" />
               <h2>Проект Boxes</h2>
               <p>Приложение</p></a
             >
           </li>
-          <li class="list">
+          <li class="item">
             <a href=""
               ><img
                 src="./imgportfolio/inspiration.jpg"
@@ -117,7 +123,7 @@
               <p>Веб-сайт</p></a
             >
           </li>
-          <li class="list">
+          <li class="item">
             <a href="">
               <img
                 src="./imgportfolio/limited.jpg"
@@ -127,14 +133,14 @@
               <p>Дизайн</p></a
             >
           </li>
-          <li class="list">
+          <li class="item">
             <a href=""
               ><img src="./imgportfolio/lab.jpg" alt="буквы" />
               <h2>Проект LAB</h2>
               <p>Маркетинг</p></a
             >
           </li>
-          <li class="list">
+          <li class="item">
             <a href="">
               <img src="./imgportfolio/bussines.jpg" alt="руки на клавиатуре" />
               <h2>Growing Business</h2>
