--- a/index.html
+++ b/index.html
@@ -14,70 +14,79 @@
   <body>
     <!--Header-->
     <header class="page-header">
-      <nav class="container">
-        <a lang="en" href="./" class="logo">
-          <span class="logo-web">Web</span>Studio</a
-        >
-        <!--Main navigation-->
-        <ul class="site-nav">
-          <li class="list">
-            <a href="./" class="link-act"> <span>Cтудия</span> </a>
+      <div class="container flexbox">
+        <nav class="navigation">
+          <a lang="en" href="./" class="logo">
+            <span class="logo-web">Web</span>Studio</a
+          >
+          <!--Main navigation-->
+          <ul class="list site-nav">
+            <li class="item">
+              <a href="./" class="link active"> <span>Cтудия</span> </a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item"><a href="./" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <!--feedback-->
+        <ul class="list site-adr">
+          <li class="item">
+            <a href="mailto:info@devstudio.com"
+              ><span>info@devstudio.com</span></a
+            >
           </li>
-          <li class="list">
-            <a href="./portfolio.html" class="link">Портфолио</a>
+          <li class="item">
+            <a href="tel:+38-095-111-11-11">+38 096 111 11 11</a>
           </li>
-          <li class="list"><a href="./" class="link">Контакты</a></li>
         </ul>
-      </nav>
-      <!--feedback-->
-      <ul class="site-adr">
-        <li class="list">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="list">
-          <a href="tel:+38-095-111-11-11">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <!--main info-->
     <main>
       <!--Poster-->
+
       <section class="poster-section">
-        <h1 class="poster-title">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
-        <button type="button" class="button">
-          <span>Заказать услугу</span>
-        </button>
+        <div class="container">
+          <h1 class="poster-title">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <button type="button" class="button">
+            <span>Заказать услугу</span>
+          </button>
+        </div>
       </section>
+
       <!--Advantage-->
+
       <section class="section-advantage">
         <div class="container">
           <!--<h2 class="advantage-title">Преимущества</h2>-->
-          <ul class="list-advantage">
-            <li class="list">
+          <ul class="list list-advantage">
+            <li class="item">
               <h3 class="title">Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="list">
+            <li class="item">
               <h3 class="title">Пунктуальность</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="list">
+            <li class="item">
               <h3 class="title">Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="list">
+            <li class="item">
               <h3 class="title">Современные технологии</h3>
               <p>
                 Значимость этих проблем настолько очевидна, что реализация
@@ -87,50 +96,58 @@
           </ul>
         </div>
       </section>
+
       <!--Work performed-->
+
       <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="work-list">
-          <li class="list">
-            <img
-              src="./image/notebook.jpg"
-              alt="руки на клавиатуре"
-              width="370"
-            />
-          </li>
-          <li class="list">
-            <img src="./image/mobile.jpg" alt="телефон в руках" width="370" />
-          </li>
-          <li class="list">
-            <img src="./image/notepad.jpg" alt="планшет" width="370" />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="list work-list">
+            <li class="item">
+              <img
+                src="./image/notebook.jpg"
+                alt="руки на клавиатуре"
+                width="370"
+              />
+            </li>
+            <li class="item">
+              <img src="./image/mobile.jpg" alt="телефон в руках" width="370" />
+            </li>
+            <li class="item">
+              <img src="./image/notepad.jpg" alt="планшет" width="370" />
+            </li>
+          </ul>
+        </div>
       </section>
+
       <!--About-->
+
       <section class="command-section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="comand-list">
-          <li class="list">
-            <img src="./image/igordemianenko.jpg" alt="Игорь Демьяненко" />
-            <h3 class="title">Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
-          </li>
-          <li class="list">
-            <img src="./image/olharepina.jpg" alt="Ольга Репина" />
-            <h3 class="title">Ольга Репина</h3>
-            <p lang="en" class="decor"><span> Frontend Developer </span></p>
-          </li>
-          <li class="list">
-            <img src="./image/nikolaitarasov.jpg" alt="Николай Тарасов" />
-            <h3 class="title">Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
-          </li>
-          <li class="list">
-            <img src="./image/michailermakov.jpg" alt="Михаил Ермаков" />
-            <h3 class="title">Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="list comand-list">
+            <li class="item">
+              <img src="./image/igordemianenko.jpg" alt="Игорь Демьяненко" />
+              <h3 class="title">Игорь Демьяненко</h3>
+              <p lang="en">Product Designer</p>
+            </li>
+            <li class="item">
+              <img src="./image/olharepina.jpg" alt="Ольга Репина" />
+              <h3 class="title">Ольга Репина</h3>
+              <p lang="en" class="decor"><span> Frontend Developer </span></p>
+            </li>
+            <li class="item">
+              <img src="./image/nikolaitarasov.jpg" alt="Николай Тарасов" />
+              <h3 class="title">Николай Тарасов</h3>
+              <p lang="en">Marketing</p>
+            </li>
+            <li class="item">
+              <img src="./image/michailermakov.jpg" alt="Михаил Ермаков" />
+              <h3 class="title">Михаил Ермаков</h3>
+              <p lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
