позиционирую секцию преимущества (располагает в строку с гибкой ширино1)

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,12 +36,10 @@
         <!--feedback-->
         <ul class="list site-adr">
           <li class="item">
-            <a href="mailto:info@devstudio.com"
-              ><span>info@devstudio.com</span></a
-            >
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="item">
-            <a href="tel:+38-095-111-11-11">+38 096 111 11 11</a>
+            <a href="tel:+38-095-111-11-11"><span>+38 096 111 11 11</span></a>
           </li>
         </ul>
       </div>
@@ -50,104 +48,125 @@
       <!--second navigation-menu-->
       <section>
         <!--<h1 class="portfolio">Портфолио</h1>-->
-        <ul class="list">
-          <li class="item">
-            <button type="button" class="button-portfolio">Все</button>
-          </li>
-          <li class="item">
-            <button type="button" class="button-portfolio">Веб-сайты</button>
-          </li>
-          <li class="item">
-            <button type="button" class="button-portfolio">Приложения</button>
-          </li>
-          <li class="item">
-            <button type="button" class="button-portfolio">Дизайн</button>
-          </li>
-          <li class="item">
-            <button type="button" class="button-portfolio">Маркетинг</button>
-          </li>
-        </ul>
-        <ul class="list list-service">
-          <li class="item">
-            <a href="/">
-              <img
-                src="./imgportfolio/vebsite.jpg"
-                alt="ноутбук с фото людей"
-              />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p></a
-            >
-          </li>
-          <li class="item">
-            <a href="">
-              <img
-                src="./imgportfolio/disain.jpg"
-                alt="баскетболисты с мячем"
-              />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
-            </a>
-          </li>
-          <li class="item">
-            <a href="">
-              <img
-                src="./imgportfolio/application.jpg"
-                alt="логотип
+        <div class="container flexbox">
+          <ul class="list list-btn flexbox">
+            <li class="item">
+              <button type="button" class="button-portfolio">Все</button>
+            </li>
+            <li class="item-portfolio">
+              <button type="button" class="button-portfolio">Веб-сайты</button>
+            </li>
+            <li class="item-portfolio">
+              <button type="button" class="button-portfolio">Приложения</button>
+            </li>
+            <li class="item-portfolio">
+              <button type="button" class="button-portfolio">Дизайн</button>
+            </li>
+            <li class="item-portfolio">
+              <button type="button" class="button-portfolio">Маркетинг</button>
+            </li>
+          </ul>
+        </div>
+        <div class="container">
+          <ul class="list list-service flexbox">
+            <li class="item-servise">
+              <a href="/">
+                <img
+                  src="./imgportfolio/vebsite.jpg"
+                  alt="ноутбук с фото людей"
+                  width="370"
+                />
+                <h2>Технокряк</h2>
+                <p>Веб-сайт</p></a
+              >
+            </li>
+            <li class="item-servise">
+              <a href="">
+                <img
+                  src="./imgportfolio/disain.jpg"
+                  alt="баскетболисты с мячем"
+                  width="370"
+                />
+                <h2>Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
+              </a>
+            </li>
+            <li class="item-servise">
+              <a href="">
+                <img
+                  src="./imgportfolio/application.jpg"
+                  alt="логотип
                ресторанаeafood"
-              />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p></a
-            >
-          </li>
-          <li class="item">
-            <a href="/"
-              ><img src="./imgportfolio/handfree.jpg" alt="наушники" />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p></a
-            >
-          </li>
-          <li class="item">
-            <a href="/"
-              ><img src="./imgportfolio/boxses.jpg" alt="две коробки" />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p></a
-            >
-          </li>
-          <li class="item">
-            <a href=""
-              ><img
-                src="./imgportfolio/inspiration.jpg"
-                alt="ноутбук с изображениемкарты мира"
-              />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p></a
-            >
-          </li>
-          <li class="item">
-            <a href="">
-              <img
-                src="./imgportfolio/limited.jpg"
-                alt="журнала с надписью ограниченное издательство"
-              />
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p></a
-            >
-          </li>
-          <li class="item">
-            <a href=""
-              ><img src="./imgportfolio/lab.jpg" alt="буквы" />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p></a
-            >
-          </li>
-          <li class="item">
-            <a href="">
-              <img src="./imgportfolio/bussines.jpg" alt="руки на клавиатуре" />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
-            </a>
-          </li>
-        </ul>
+                  width="370"
+                />
+                <h2>Ресторан Seafood</h2>
+                <p>Приложение</p></a
+              >
+            </li>
+            <li class="item-servise">
+              <a href="/"
+                ><img
+                  src="./imgportfolio/handfree.jpg"
+                  alt="наушники"
+                  width="370"
+                />
+                <h2>Проект Prime</h2>
+                <p>Маркетинг</p></a
+              >
+            </li>
+            <li class="item-servise">
+              <a href="/"
+                ><img
+                  src="./imgportfolio/boxses.jpg"
+                  alt="две коробки"
+                  width="370"
+                />
+                <h2>Проект Boxes</h2>
+                <p>Приложение</p></a
+              >
+            </li>
+            <li class="item-servise">
+              <a href=""
+                ><img
+                  src="./imgportfolio/inspiration.jpg"
+                  alt="ноутбук с изображениемкарты мира"
+                  width="370"
+                />
+                <h2>Inspiration has no Borders</h2>
+                <p>Веб-сайт</p></a
+              >
+            </li>
+            <li class="item-servise">
+              <a href="">
+                <img
+                  src="./imgportfolio/limited.jpg"
+                  alt="журнала с надписью ограниченное издательство"
+                  width="370"
+                />
+                <h2>Издание Limited Edition</h2>
+                <p>Дизайн</p></a
+              >
+            </li>
+            <li class="item-servise">
+              <a href=""
+                ><img src="./imgportfolio/lab.jpg" alt="буквы" width="370" />
+                <h2>Проект LAB</h2>
+                <p>Маркетинг</p></a
+              >
+            </li>
+            <li class="item-servise">
+              <a href="">
+                <img
+                  src="./imgportfolio/bussines.jpg"
+                  alt="руки на клавиатуре"
+                  width="370"
+                />
+                <h2>Growing Business</h2>
+                <p>Приложение</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="foter">
