--- a/index.html
+++ b/index.html
@@ -61,34 +61,34 @@
 
       <!--Advantage-->
 
-      <section class="section-advantage">
+      <section class="section advantage">
         <div class="container">
-          <!--<h2 class="advantage-title">Преимущества</h2>-->
-          <ul class="list list-advantage">
-            <li class="item">
+          <h2 class="advantage-title">Преимущества</h2>
+          <ul class="list-advantage list flexbox">
+            <li class="item-advantage">
               <h3 class="title">Внимание к деталям</h3>
-              <p>
+              <p class="paragraph-adv">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="item">
+            <li class="item-advantage">
               <h3 class="title">Пунктуальность</h3>
-              <p>
+              <p class="paragraph-adv">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="item">
+            <li class="item-advantage">
               <h3 class="title">Планирование</h3>
-              <p>
+              <p class="paragraph-adv">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="item">
+            <li class="item-advantage">
               <h3 class="title">Современные технологии</h3>
-              <p>
+              <p class="paragraph-adv">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
@@ -102,7 +102,7 @@
       <section class="section">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="list work-list">
+          <ul class="list work-list flexbox">
             <li class="item">
               <img
                 src="./image/notebook.jpg"
@@ -122,26 +122,26 @@
 
       <!--About-->
 
-      <section class="command-section">
+      <section class="section command">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="list comand-list">
-            <li class="item">
+          <ul class="list comand-list flexbox">
+            <li class="item-command">
               <img src="./image/igordemianenko.jpg" alt="Игорь Демьяненко" />
               <h3 class="title">Игорь Демьяненко</h3>
               <p lang="en">Product Designer</p>
             </li>
-            <li class="item">
+            <li class="item-command">
               <img src="./image/olharepina.jpg" alt="Ольга Репина" />
               <h3 class="title">Ольга Репина</h3>
               <p lang="en" class="decor"><span> Frontend Developer </span></p>
             </li>
-            <li class="item">
+            <li class="item-command">
               <img src="./image/nikolaitarasov.jpg" alt="Николай Тарасов" />
               <h3 class="title">Николай Тарасов</h3>
               <p lang="en">Marketing</p>
             </li>
-            <li class="item">
+            <li class="item-command">
               <img src="./image/michailermakov.jpg" alt="Михаил Ермаков" />
               <h3 class="title">Михаил Ермаков</h3>
               <p lang="en">UI Designer</p>
@@ -153,15 +153,5 @@
 
     <!--Footer-->
     <footer class="foter">
-      <a lang="en" href="./" class="logo-foter">
-        <span class="logo-web">Web</span>Studio</a
-      ><br />
-      <address class="adress">
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+38-096-111-11-11">+38 096 111 11 11</a><br />
-      </address>
-    </footer>
   </body>
 </html>
