правки в секцию команда

--- a/index.html
+++ b/index.html
@@ -153,5 +153,15 @@
 
     <!--Footer-->
     <footer class="foter">
+      <a lang="en" href="./" class="logo-foter">
+        <span class="logo-web">Web</span>Studio</a
+      ><br />
+      <address class="adress">
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <br />
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+        <a href="tel:+38-096-111-11-11">+38 096 111 11 11</a><br />
+      </address>
+    </footer>
   </body>
 </html>
