--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <!--feedback-->
         <ul class="list site-adr">
           <li class="item">
-            <a href="mailto:info@devstudio.com"
+            <a href="mailto:info@devstudio.com" class="link"
               ><span>info@devstudio.com</span></a
             >
           </li>
           <li class="item">
-            <a href="tel:+38-095-111-11-11">+38 096 111 11 11</a>
+            <a href="tel:+38-095-111-11-11" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -152,16 +152,23 @@
     </main>
 
     <!--Footer-->
-    <footer class="foter">
-      <a lang="en" href="./" class="logo-foter">
-        <span class="logo-web">Web</span>Studio</a
-      ><br />
-      <address class="adress">
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+38-096-111-11-11">+38 096 111 11 11</a><br />
-      </address>
+    <footer class="page-foter">
+      <div class="container foter-container">
+        <a lang="en" href="./" class="logo-foter">
+          <span class="logo-web">Web</span>Studio</a
+        ><br />
+        <address class="adress">
+          <p class="paragraph">г. Киев, пр-т Леси Украинки, 26</p>
+
+          <a href="mailto:info@devstudio.com" class="link footer-link"
+            >info@devstudio.com</a
+          >
+
+          <a href="tel:+38-096-111-11-11" class="link footer-link">
+            +38 096 111 11 11</a
+          >
+        </address>
+      </div>
     </footer>
   </body>
 </html>
