--- a/portfolio.html
+++ b/portfolio.html
@@ -46,23 +46,23 @@
     </header>
     <main>
       <!--second navigation-menu-->
-      <section>
+      <section class="section page-portfolio">
         <!--<h1 class="portfolio">Портфолио</h1>-->
-        <div class="container flexbox">
-          <ul class="list list-btn flexbox">
-            <li class="item">
+        <div class="container">
+          <ul class="list list-button flexbox">
+            <li class="item-btn">
               <button type="button" class="button-portfolio">Все</button>
             </li>
-            <li class="item-portfolio">
+            <li class="item-btn">
               <button type="button" class="button-portfolio">Веб-сайты</button>
             </li>
-            <li class="item-portfolio">
+            <li class="item-btn">
               <button type="button" class="button-portfolio">Приложения</button>
             </li>
-            <li class="item-portfolio">
+            <li class="item-btn">
               <button type="button" class="button-portfolio">Дизайн</button>
             </li>
-            <li class="item-portfolio">
+            <li class="item-btn">
               <button type="button" class="button-portfolio">Маркетинг</button>
             </li>
           </ul>
@@ -96,7 +96,7 @@
                 <img
                   src="./imgportfolio/application.jpg"
                   alt="логотип
-               ресторанаeafood"
+               ресторанаe a food"
                   width="370"
                 />
                 <h2>Ресторан Seafood</h2>
@@ -129,7 +129,7 @@
               <a href=""
                 ><img
                   src="./imgportfolio/inspiration.jpg"
-                  alt="ноутбук с изображениемкарты мира"
+                  alt="ноутбук с изображением карты мира"
                   width="370"
                 />
                 <h2>Inspiration has no Borders</h2>
@@ -169,16 +169,23 @@
         </div>
       </section>
     </main>
-    <footer class="foter">
-      <a lang="en" href="./" class="logo-foter">
-        <span class="logo-web">Web</span>Studio</a
-      ><br />
-      <address class="adress">
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+38-096-111-11-11">+38 096 111 11 11</a><br />
-      </address>
+    <footer class="page-foter">
+      <div class="container foter-container">
+        <a lang="en" href="./" class="logo-foter">
+          <span class="logo-web">Web</span>Studio</a
+        ><br />
+        <address class="adress">
+          <p class="paragraph">г. Киев, пр-т Леси Украинки, 26</p>
+
+          <a href="mailto:info@devstudio.com" class="link footer-link"
+            >info@devstudio.com</a
+          >
+
+          <a href="tel:+38-096-111-11-11" class="link footer-link">
+            +38 096 111 11 11</a
+          >
+        </address>
+      </div>
     </footer>
   </body>
 </html>
