--- a/portfolio.html
+++ b/portfolio.html
@@ -76,9 +76,10 @@
                   alt="ноутбук с фото людей"
                   width="370"
                 />
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p></a
-              >
+
+                <h2 class="title-service">Технокряк</h2>
+                <p class="text">Веб-сайт</p>
+              </a>
             </li>
             <li class="item-servise">
               <a href="">
@@ -87,8 +88,9 @@
                   alt="баскетболисты с мячем"
                   width="370"
                 />
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+
+                <h2 class="title-service">Постер New Orlean vs Golden Star</h2>
+                <p class="text">Дизайн</p>
               </a>
             </li>
             <li class="item-servise">
@@ -99,9 +101,10 @@
                ресторанаe a food"
                   width="370"
                 />
-                <h2>Ресторан Seafood</h2>
-                <p>Приложение</p></a
-              >
+
+                <h2 class="title-service">Ресторан Seafood</h2>
+                <p class="text">Приложение</p>
+              </a>
             </li>
             <li class="item-servise">
               <a href="/"
@@ -110,9 +113,10 @@
                   alt="наушники"
                   width="370"
                 />
-                <h2>Проект Prime</h2>
-                <p>Маркетинг</p></a
-              >
+
+                <h2 class="title-service">Проект Prime</h2>
+                <p class="text">Маркетинг</p>
+              </a>
             </li>
             <li class="item-servise">
               <a href="/"
@@ -121,9 +125,10 @@
                   alt="две коробки"
                   width="370"
                 />
-                <h2>Проект Boxes</h2>
-                <p>Приложение</p></a
-              >
+
+                <h2 class="title-service">Проект Boxes</h2>
+                <p class="text">Приложение</p>
+              </a>
             </li>
             <li class="item-servise">
               <a href=""
@@ -132,9 +137,10 @@
                   alt="ноутбук с изображением карты мира"
                   width="370"
                 />
-                <h2>Inspiration has no Borders</h2>
-                <p>Веб-сайт</p></a
-              >
+
+                <h2 class="title-service">Inspiration has no Borders</h2>
+                <p class="text">Веб-сайт</p>
+              </a>
             </li>
             <li class="item-servise">
               <a href="">
@@ -143,15 +149,17 @@
                   alt="журнала с надписью ограниченное издательство"
                   width="370"
                 />
-                <h2>Издание Limited Edition</h2>
-                <p>Дизайн</p></a
-              >
+
+                <h2 class="title-service">Издание Limited Edition</h2>
+                <p class="text">Дизайн</p>
+              </a>
             </li>
             <li class="item-servise">
               <a href=""
                 ><img src="./imgportfolio/lab.jpg" alt="буквы" width="370" />
-                <h2>Проект LAB</h2>
-                <p>Маркетинг</p></a
+
+                <h2 class="title-service">Проект LAB</h2>
+                <p class="text">Маркетинг</p></a
               >
             </li>
             <li class="item-servise">
@@ -161,8 +169,9 @@
                   alt="руки на клавиатуре"
                   width="370"
                 />
-                <h2>Growing Business</h2>
-                <p>Приложение</p>
+
+                <h2 class="title-service">Growing Business</h2>
+                <p class="text">Приложение</p>
               </a>
             </li>
           </ul>
