--- a/portfolio.html
+++ b/portfolio.html
@@ -34,12 +34,16 @@
           </ul>
         </nav>
         <!--feedback-->
-        <ul class="list site-adr">
+        <ul class="list site-adr flexbox">
           <li class="item">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="item">
-            <a href="tel:+38-095-111-11-11"><span>+38 096 111 11 11</span></a>
+            <a href="tel:+38-095-111-11-11" class="link"
+              ><span>+38 096 111 11 11</span></a
+            >
           </li>
         </ul>
       </div>
